# silicon_refinery

./: .gitignore  CHANGELOG.md  README.md  crash_report_for_llm.txt  pyproject.toml
.github/workflows/: ci.yml  publish-chat-repo.yml  publish-chat-signed.yml  publish.yml
Casks/: fmchat.rb  silicon-refinery-chat.rb
Formula/: fmtools.rb  silicon-refinery.rb
datasets/: medical_notes.csv  product_reviews.csv  server_logs.csv  support_tickets.csv
examples/: README.md  transcript_processing.py
examples/toga_local_chat_app/: README.md  pyproject.toml
examples/toga_local_chat_app/src/silicon_refinery_chat/: __init__.py  __main__.py  app.py
scripts/: check_version_policy.py  generate_datasets.py  publish_chat_repo.sh
silicon_refinery/: __init__.py  adapters.py  async_generators.py  cli.py  debugging.py  decorators.py  dspy_ext.py  pipeline.py  polars_ext.py
standalone/fmchat/: README.md
standalone/silicon-refinery-chat/: .gitignore  README.md
tests/: test_basic.py  test_debugging.py
use_cases/01_pipeline_operators/: example.py
use_cases/02_decorators/: example.py
use_cases/03_async_generators/: example.py
use_cases/04_ecosystem_polars/: example.py
use_cases/05_dspy_optimization/: example.py
use_cases/06_fastapi_integration/: example.py
use_cases/07_stress_test_throughput/: example.py
use_cases/08_context_limit_test/: example.py
use_cases/09_enhanced_debugging/: README.md  example.py  sample_crash_report.txt
use_cases/batch_processing/: README.md
use_cases/data_analysis/: README.md
use_cases/web_api/: README.md
