[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmchat"
version = "0.0.218"
description = "Realtime local Apple Foundation Models desktop chat app built with Toga + Briefcase."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT License" }
dependencies = [
    "apple-fm-sdk @ git+https://github.com/apple/python-apple-fm-sdk.git",
    "briefcase>=0.3.26",
    "chardet<6",
    "toga>=0.5.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
apple-fm-sdk = { git = "https://github.com/apple/python-apple-fm-sdk" }

[tool.briefcase]
project_name = "FMChat"
bundle = "com.fmtools"
version = "0.0.218"
license.file = "../../LICENSE"
url = "https://github.com/adpena/fmtools"
author = "FMTools"
author_email = "opensource@fmtools.local"

[tool.briefcase.app.fmchat]
formal_name = "FMChat"
description = "Realtime local Apple FM chat with sqlite memory and streaming UX."
icon = "icons/fmchat"
sources = ["src/fmchat"]
requires = [
    "apple-fm-sdk @ git+https://github.com/apple/python-apple-fm-sdk.git",
    "toga-cocoa>=0.5.2",
]
